--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -39,7 +39,7 @@
           </span>
         </li>
         <li class="">
-          <a href="/" class="">
+          <a href="{% url 'dashboard' %}" class="">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
