--- a/templates/main_base.html
+++ b/templates/main_base.html
@@ -86,7 +86,7 @@
           </a>
         </li>
         <li class="">
-          <a href="">
+          <a href="{% url 'history' %}">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
