--- a/templates/profile/profile.html
+++ b/templates/profile/profile.html
@@ -2,60 +2,60 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">User Profile</h2>
+    <div class="card shadow-sm">
+        <!-- Card Header with User Name -->
+        <div class="card-header bg-primary text-white text-center">
+            <h2 class="mb-0">{{ request.user.get_full_name|default:request.user.username }}</h2>
+        </div>
 
-    <div class="card shadow-sm p-4">
-        <div class="row align-items-center">
-            <!-- Profile Picture Column -->
-            <div class="col-md-4 text-center">
+        <div class="card-body">
+            <!-- Profile Picture & Edit Button -->
+            <div class="d-flex flex-column align-items-center mb-4">
                 {% if request.user.profile.profile_picture %}
-                    <img src="{{ request.user.profile.profile_picture.url }}" 
-                         alt="Profile Picture" 
+                    <img src="{{ request.user.profile.profile_picture.url }}"
+                         alt="Profile Picture"
                          class="img-thumbnail rounded-circle mb-3"
                          style="width: 180px; height: 180px; object-fit: cover;">
                 {% else %}
-                    <div class="mb-3">
-                        <p>No profile picture uploaded.</p>
-                    </div>
+                    <div class="mb-3 text-muted fst-italic">No profile picture uploaded.</div>
                 {% endif %}
-                <a href="{% url 'edit_profile' %}" class="btn btn-primary">Edit Profile</a>
+                <a href="{% url 'edit_profile' %}" class="btn btn-outline-primary px-4">Edit Profile</a>
             </div>
 
-            <!-- User Info Column -->
-            <div class="col-md-8">
-                <h4 class="mb-3">{{ request.user.get_full_name|default:request.user.username }}</h4>
-                <table class="table table-borderless">
+            <!-- User Info Table -->
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered align-middle mb-0">
                     <tbody>
                         <tr>
-                            <th scope="row" style="width: 150px;">Username:</th>
+                            <th scope="row" style="width: 150px;">Username</th>
                             <td>{{ request.user.username }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Email:</th>
+                            <th scope="row">Email</th>
                             <td>{{ request.user.email }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">First Name:</th>
+                            <th scope="row">First Name</th>
                             <td>{{ request.user.first_name|default:"-" }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Last Name:</th>
+                            <th scope="row">Last Name</th>
                             <td>{{ request.user.last_name|default:"-" }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Birthdate:</th>
+                            <th scope="row">Birthdate</th>
                             <td>{{ request.user.profile.birthdate|default:"Not set" }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Location:</th>
+                            <th scope="row">Location</th>
                             <td>{{ request.user.profile.location|default:"Not set" }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Phone:</th>
+                            <th scope="row">Phone</th>
                             <td>{{ request.user.profile.phone|default:"Not set" }}</td>
                         </tr>
                         <tr>
-                            <th scope="row">Other Info:</th>
+                            <th scope="row">Other Info</th>
                             <td>{{ request.user.profile.other_info|default:"None" }}</td>
                         </tr>
                     </tbody>
