AI-RESULT-WORKING
GRRRRR

--- a/templates/main/quizzes/quiz_result.html
+++ b/templates/main/quizzes/quiz_result.html
@@ -18,4 +18,9 @@
     {% endif %}
   </div>
 {% endfor %}
+
+<hr>
+<h3>Personalized AI Study Recommendations</h3>
+<p>{{ recommendation|linebreaksbr }}</p>
+
 {% endblock %}
